--- a/机械手臂.md
+++ b/机械手臂.md
@@ -1,11 +1,21 @@
-#机械臂
-##[Kuka](http://www.kuka-robotics.com/zh/)(库卡)  
-库卡机器人上海有限公司	地址：中国上海松江小昆山镇889号 邮编201614 电话： +86 21 57072688
+#机械臂  
+##[Kuka](http://www.kuka-robotics.com/zh/)(库卡)    
+库卡机器人上海有限公司	地址：中国上海松江小昆山镇889号 邮编201614 电话： +86 21 57072688   
 
 
-型号：**KR100P/2**        
-ebay: ￥[25000](http://www.ebay.com/itm/Kuka-Roboter-KR100P-2-Robot-Arm-w-KRC1A-Controller-and-Teach-Pendant-/271597116926?pt=LH_DefaultDomain_0&hash=item3f3c731dfe)      
+型号：**KR100P/2**           
+ebay: ￥[25000](http://www.ebay.com/itm/Kuka-Roboter-KR100P-2-Robot-Arm-w-KRC1A-Controller-and-Teach-Pendant-/271597116926?pt=LH_DefaultDomain_0&hash=item3f3c731dfe)         
 
 
-型号：**kr210**   
-ebay：￥[160000](http://www.ebay.com/itm/KUKA-KR210-Robot-w-KRC2-Control-system-KRC2-Controller-Pendant-Complete-/281541574071?pt=LH_DefaultDomain_0&hash=item418d2f7db7)   
+型号：**KR210**   
+ebay：￥[160000](http://www.ebay.com/itm/KUKA-KR210-Robot-w-KRC2-Control-system-KRC2-Controller-Pendant-Complete-/281541574071?pt=LH_DefaultDomain_0&hash=item418d2f7db7)      
+
+##[Fanuc](http://www.shanghai-fanuc.com.cn/)(发那科(上海)机器人有限公司)  
+
+
+型号：**FANUC 100i**     
+淘宝：￥[58000](http://item.taobao.com/item.htm?spm=a230r.1.14.208.mAynC8&id=35527127391&ns=1&abbucket=16&_u=ffdpsdu2cd0#detail)     
+
+
+型号：**A05B-1134-B051**     
+ebay: ￥[15000](http://www.ebay.com/itm/FANUC-A05B-1134-B051-LR-MATE-100i-HIGH-SPEED-ROBOT-ARM-W-A05B-2330-B007-R-J2-/281625345440?pt=LH_DefaultDomain_0&hash=item41922dbda0)    
