--- a/机械手臂.md
+++ b/机械手臂.md
@@ -2,18 +2,17 @@
 ##[Kuka](http://www.kuka-robotics.com/zh/)(库卡)    
 库卡机器人上海有限公司	地址：中国上海松江小昆山镇889号 邮编201614 电话： +86 21 57072688   
 
-
 型号：**KR100P/2**           
 ebay: ￥[25000](http://www.ebay.com/itm/Kuka-Roboter-KR100P-2-Robot-Arm-w-KRC1A-Controller-and-Teach-Pendant-/271597116926?pt=LH_DefaultDomain_0&hash=item3f3c731dfe)         
-
 
 型号：**KR210**   
 ebay：￥[160000](http://www.ebay.com/itm/KUKA-KR210-Robot-w-KRC2-Control-system-KRC2-Controller-Pendant-Complete-/281541574071?pt=LH_DefaultDomain_0&hash=item418d2f7db7)      
 
-##[Fanuc](http://www.shanghai-fanuc.com.cn/)(发那科(上海)机器人有限公司)  
+##[Fanuc](http://www.shanghai-fanuc.com.cn/)(发那科) 
+发那科(上海)机器人有限公司  TEL：021-50327700   FAX：021-50327711    地址：上海市宝山区富联路1500号
 
-
-型号：**FANUC 100i**     
+型号：**FANUC 100i** 
+可搬运质量:80～100kg
 淘宝：￥[58000](http://item.taobao.com/item.htm?spm=a230r.1.14.208.mAynC8&id=35527127391&ns=1&abbucket=16&_u=ffdpsdu2cd0#detail)     
 
 
