--- a/机械手臂.md
+++ b/机械手臂.md
@@ -6,7 +6,7 @@
 电话：+86 21 57072688   
 
 型号：**KR100P/2**           
-ebay: ￥[25000](http://www.ebay.com/itm/Kuka-Roboter-KR100P-2-Robot-Arm-w-KRC1A-Controller-and-Teach-Pendant-/271597116926?pt=LH_DefaultDomain_0&hash=item3f3c731dfe)         
+ebay: ￥[25000](http://www.ebay.com/itm/Kuka-Roboter-KR100P-2-Robot-Arm-w-KRC1A-Controller-and-Teach-Pendant-/271597116926?pt=LH_DefaultDomain_0&hash=item3f3c731dfe)(Used)         
 
 型号：**KR210**   
 ebay：￥[160000](http://www.ebay.com/itm/KUKA-KR210-Robot-w-KRC2-Control-system-KRC2-Controller-Pendant-Complete-/281541574071?pt=LH_DefaultDomain_0&hash=item418d2f7db7)      
