--- a/机械手臂.md
+++ b/机械手臂.md
@@ -22,3 +22,8 @@ FAX：021-50327711
 淘宝：￥[58000](http://item.taobao.com/item.htm?spm=a230r.1.14.208.mAynC8&id=35527127391&ns=1&abbucket=16&_u=ffdpsdu2cd0#detail)     
 
 
+##[森汉](http://www.senpower.cn/)
+型号：**可编程高寿命6自由度机械手**      
+淘宝：￥[23000](http://item.taobao.com/item.htm?spm=a230r.1.14.6.nvXqkT&id=15961813831&ns=1&abbucket=16&_u=ffdpsdu752a#detail)      
+
+
