--- a/机械手臂.md
+++ b/机械手臂.md
@@ -22,7 +22,11 @@ FAX：021-50327711
 淘宝：￥[58000](http://item.taobao.com/item.htm?spm=a230r.1.14.208.mAynC8&id=35527127391&ns=1&abbucket=16&_u=ffdpsdu2cd0#detail)     
 
 
-##[森汉](http://www.senpower.cn/)
+##[森汉](http://www.senpower.cn/)(senpower)
+北京森汉科技  
+地址：北京市昌平区回龙观镇龙腾苑六区15号楼2单元202
+电话：010-62669493 
+邮箱：senpower@163.com     1144656201@qq.com
 型号：**可编程高寿命6自由度机械手**      
 淘宝：￥[23000](http://item.taobao.com/item.htm?spm=a230r.1.14.6.nvXqkT&id=15961813831&ns=1&abbucket=16&_u=ffdpsdu752a#detail)      
 
