--- a/图像的格式.md
+++ b/图像的格式.md
@@ -1,3 +1,4 @@
-图像的格式如下图
-![Y10B格式](img3.douban.com/view/photo/large/public/p2234559920.jpg)
+图像的格式如下图    
+ 
+![ Y10B格式 ](http://img3.douban.com/view/photo/large/public/p2234559920.jpg)
 
