--- a/图像的格式.md
+++ b/图像的格式.md
@@ -1,4 +1,13 @@
-图像的格式如下图    
+kinect深度图像采用黑白格式存储
+Y10B图像的格式如下   
  
 ![ Y10B格式 ](http://img3.douban.com/view/photo/large/public/p2234559920.jpg)
+
+每个像素点用10bit来表示深度 故一共有2^10个级别 
+每个像素点的颜色深浅表示景物与摄像头的距离远近程度
+颜色越深 距离越近
+
+由于 1 字节 == 8 位 
+所以10bit像素点的存储会跨越字节 
+在原文中是这样表述的:[ cross the byte boundary and have a ratio of 5 bytes for each 4 pixels.]
 
