--- a/图像的格式.md
+++ b/图像的格式.md
@@ -1,7 +1,7 @@
 kinect深度图像采用黑白格式存储
 Y10B图像的格式如下   
  
-![ Y10B格式 ](http://img3.douban.com/view/photo/large/public/p2234559920.jpg)
+![ Y10B格式 ](http://http://img3.douban.com/view/photo/large/public/p2234561615.jpg)
 
 每个像素点用10bit来表示深度 故一共有2^10个级别 
 每个像素点的颜色深浅表示景物与摄像头的距离远近程度
