--- a/图像的格式.md
+++ b/图像的格式.md
@@ -1,4 +1,5 @@
-kinect深度图像采用黑白格式存储  
+#kinect深度图像的格式    
+采用[Y10B](http://img3.douban.com/view/photo/large/public/p2234561615.jpg)格式存储  
 格式如下   
  
 ![ Y10B格式 ](http://img3.douban.com/view/photo/large/public/p2234561615.jpg)
@@ -11,5 +12,7 @@ kinect深度图像采用黑白格式存储
 由于 1 字节 == 8 位    
 所以10bit像素点的存储会跨越字节     
 在原文中是这样表述的:    
-[ cross the byte boundary and have a ratio of 5 bytes for each 4 pixels.]
+[ cross the byte boundary and have a ratio of 5 bytes for each 4 pixels.]  
+即用5个字节存储4个像素点的数据:  
+5*8(1字节为8位) == 4*10(1像素点为10位)
 
