--- a/图像的格式.md
+++ b/图像的格式.md
@@ -11,8 +11,12 @@
 
 由于 1 字节 == 8 位    
 所以10bit像素点的存储会跨越字节     
-在原文中是这样表述的:    
+在手册中是这样表述的:    
 [ cross the byte boundary and have a ratio of 5 bytes for each 4 pixels.]  
 即用5个字节存储4个像素点的数据:  
-5*8(1字节为8位) == 4*10(1像素点为10位)
+5x8(1字节为8位) == 4x10(1像素点为10位)
+
+
+手册中还提到:#with no padding between them#
+
 
