--- a/图像的格式.md
+++ b/图像的格式.md
@@ -11,7 +11,7 @@
 
 由于 1 字节 == 8 位    
 所以10bit像素点的存储会跨越字节     
-在[手册](www.linuxtv.org/downloads/v4l-dvb-apis/V4L2-PIX-FMT-Y10BPACK.html#idp23386288)中是这样表述的:    
+在[数据手册](www.linuxtv.org/downloads/v4l-dvb-apis/V4L2-PIX-FMT-Y10BPACK.html#idp23386288)中是这样表述的:    
 **"cross the byte boundary and have a ratio of 5 bytes for each 4 pixels."**  
 即用5个字节存储4个像素点的数据:  
 5x8(1字节为8位) == 4x10(1像素点为10位)
